--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,21 @@
+Changes since version 1.5.0
+---------------------------
+
+- The relevant Windows project files were fixed to generate Slice
+  checksums.
+
+- Fixed harmless warnings emitted by the IcePatch client.
+
+- Fixed a bug in IceStorm that caused a subscriber to no longer
+  receive events after unsubscribing and resubscribing to the same
+  topic.
+
+- Fixed a bug in the slice2cs code generator: classes with multiple
+  sequence members caused incorrect code to be generated.
+
+- Added work-around for clients "hanging" at exit when using
+  IcePack on Windows.
+
 Changes since version 1.4.0
 ---------------------------
 
